--- a/src/catalog.html
+++ b/src/catalog.html
@@ -1,44 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
     <link
-      href="https://fonts.googleapis.com/css2?family=Oswald&display=swap"
-      rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Oswald&display=swap"
+        rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/style.min.css" />
+    <link rel="stylesheet" href="css/style.min.css"/>
     <title>Cat Energy catalog</title>
   </head>
   <body>
     <header class="header header--inner-page layout">
       <a class="header__link" href="#">
         <picture>
-          <source srcset="img/logo-desktop.svg" media="(min-width: 1280px)" />
-          <source srcset="img/logo-tablet.svg" media="(min-width: 768px)" />
-          <img src="img/logo-mobile.svg" alt="логотип cat energy" />
+          <source srcset="img/logo-desktop.svg" media="(min-width: 1280px)"/>
+          <source srcset="img/logo-tablet.svg" media="(min-width: 768px)"/>
+          <img src="img/logo-mobile.svg" alt="логотип cat energy"/>
         </picture>
       </a>
       <a class="header__logo" href="#">
-        <img src="img/logo-mobile2.svg" width="101" height="18" alt="" />
+        <img src="img/logo-mobile2.svg" width="101" height="18" alt=""/>
       </a>
       <button class="burger-button">
         <span class="visually-hidden">кнопка меню навигации по сайту</span>
       </button>
       <nav class="navigation navigation--disable">
-        <a class="navigation__item navigation__item--inner-page" href="index.html"
-          >главная</a
+        <a
+            class="navigation__item navigation__item--inner-page" href="index.html"
+        >главная</a
         >
         <a
-          class="navigation__item navigation__item--inner-page navigation__item--active"
-          href="catalog.html"
+            class="navigation__item navigation__item--inner-page navigation__item--active"
+            href="catalog.html"
         >
           каталог продукции
         </a>
-        <a class="navigation__item navigation__item--inner-page" href="#"
-          >подбор программы</a
+        <a
+            class="navigation__item navigation__item--inner-page" href="#"
+        >подбор программы</a
         >
       </nav>
     </header>
@@ -52,84 +54,85 @@
 
       <section class="cards">
         <ul class="layout cards__list">
-          <li class="card">
-            <div class="card__wrapper">
+          <li class="cards__item">
+            <div class="card">
               <div class="card__inner">
                 <div class="card__picture">
                   <picture>
                     <source
-                      srcset="img/product1_min-desktop.png"
-                      media="(min-width: 1280px)"
+                        srcset="img/product1_min-desktop.png"
+                        media="(min-width: 1280px)"
                     />
                     <source
-                      srcset="img/product1_min-tablet.png"
-                      media="(min-width: 768px)"
+                        srcset="img/product1_min-tablet.png"
+                        media="(min-width: 768px)"
                     />
-                    <img src="img/product1_min-mobile.png" alt="Cat Energy PRO 500 г" />
+                    <img src="img/product1_min-mobile.png" alt="Cat Energy PRO 500 г"/>
                   </picture>
                 </div>
-                <table class="card__table">
-                  <caption class="card__title">
-                    Cat Energy PRO 500 г
-                  </caption>
-                  <tbody>
-                    <tr class="card__box">
-                      <th class="card__description">Масса</th>
-                      <th class="card__description">500 г</th>
-                    </tr>
-                    <tr class="card__box">
-                      <th class="card__description">Вкус</th>
-                      <th class="card__description">Курица</th>
-                    </tr>
-                    <tr class="card__box">
-                      <th class="card__description">Цена</th>
-                      <th class="card__description">700 Р.</th>
-                    </tr>
-                  </tbody>
-                </table>
+
+                <div class="card__table">
+                  <h1 class="card__title">Cat Energy PRO 500 г</h1>
+
+                  <div class="card__box">
+                    <p class="card__description">Масса</p>
+                    <p class="card__description card__description--text-right">500 г</p>
+                  </div>
+                  <div class="card__box">
+                    <p class="card__description">Вкус</p>
+                    <p class="card__description card__description--text-right">Курица</p>
+                  </div>
+                  <div class="card__box">
+                    <p class="card__description">Цена</p>
+                    <p class="card__description card__description--text-right">700 Р.</p>
+                  </div>
+                </div>
               </div>
               <button class="button card__button">заказать</button>
             </div>
           </li>
 
-          <li class="card">
-            <div class="card__wrapper">
+          <li class="cards__item">
+            <div class="card">
               <div class="card__inner">
-                <div class="card__picture">
+                <div class="card__picture card__picture--big">
                   <picture>
                     <source
-                      srcset="img/product1_max-desktop.png"
-                      media="(min-width: 1280px)"
+                        srcset="img/product1_max-desktop.png"
+                        media="(min-width: 1280px)"
                     />
                     <source
-                      srcset="img/product1_max-tablet.png"
-                      media="(min-width: 768px)"
+                        srcset="img/product1_max-tablet.png"
+                        media="(min-width: 768px)"
                     />
-                    <img src="img/product1_max-mobile.png" alt="Cat Energy PRO 500 г" />
+                    <img src="img/product1_max-mobile.png" alt="Cat Energy PRO 500 г"/>
                   </picture>
                 </div>
-                <table class="card__table">
-                  <caption class="card__title">
+                <div class="card__table">
+                  <h1 class="card__title">
                     Cat Energy PRO 1000 г
-                  </caption>
-                  <tbody>
-                    <tr class="card__box">
-                      <th class="card__description">Масса</th>
-                      <th class="card__description">1000 г</th>
-                    </tr>
-                    <tr class="card__box">
-                      <th class="card__description">Вкус</th>
-                      <th class="card__description">Курица</th>
-                    </tr>
-                    <tr class="card__box">
-                      <th class="card__description">Цена</th>
-                      <th class="card__description">1000 Р.</th>
-                    </tr>
-                  </tbody>
-                </table>
+                  </h1>
+                  <div class="card__box">
+                    <p class="card__description">Масса</p>
+                    <p class="card__description card__description--text-right">
+                      1000 г
+                    </p>
+                  </div>
+                  <div class="card__box">
+                    <p class="card__description">Вкус</p>
+                    <p class="card__description card__description--text-right">
+                      Курица
+                    </p>
+                  </div>
+                  <div class="card__box">
+                    <p class="card__description">Цена</p>
+                    <p class="card__description card__description--text-right">
+                      1000 Р.
+                    </p>
+                  </div>
+                </div>
               </div>
               <button class="button card__button">заказать</button>
-            </div>
           </li>
         </ul>
       </section>
@@ -145,11 +148,11 @@
         </div>
         <div class="layout map__box">
           <picture>
-            <source srcset="img/map-pin-tablet.png" media="(min-width: 768px)" />
+            <source srcset="img/map-pin-tablet.png" media="(min-width: 768px)"/>
             <img
-              class="map__mark"
-              src="img/marker-icon.png"
-              alt="карта расположения компании cat energy"
+                class="map__mark"
+                src="img/marker-icon.png"
+                alt="карта расположения компании cat energy"
             />
           </picture>
         </div>
@@ -161,9 +164,9 @@
         <div class="footer__logo-box">
           <a class="footer__logo" href="index.html">
             <img
-              class="footer__img"
-              src="img/footer-logo.svg"
-              alt="логотип компании cat energy"
+                class="footer__img"
+                src="img/footer-logo.svg"
+                alt="логотип компании cat energy"
             />
           </a>
         </div>
@@ -193,7 +196,7 @@
         <div class="footer__copyright">
           <a class="footer__link" href="https://htmlacademy.ru/">
             HTML&nbsp;Academy
-            <img src="img/logo_html.svg" alt="логотип HTML academy" />
+            <img src="img/logo_html.svg" alt="логотип HTML academy"/>
           </a>
         </div>
       </div>
